# unilink

./: .gitignore  .replit  README.md  SETUP_GUIDE.md  package-lock.json  package.json  pyproject.toml  replit.md  start-all.bat  start-all.sh
app/: README.md  main.py
app/api/: auth.py  captions.py  otp.py  posts.py  s3.py  users.py
app/core/: config.py  database.py  redis_client.py  security.py
app/models/: otp.py  post.py  user.py
app/utils/: email_service.py  s3_utils.py
chat-service/: .env  README.md  main.py  pyproject.toml
chat-service/config/: settings.py
chat-service/core/: database.py  redis_client.py
chat-service/middleware/: auth.py
chat-service/models/: conversation.py  message.py  user.py
chat-service/routes/: chat.py
chat-service/schemas/: message.py  user.py
chat-service/services/: redis_service.py  socket_service.py
chat-service/websocket/: manager.py
client/: package-lock.json  package.json
client/src/: index.css
notification-service/: .env  README.md  go.mod  go.sum
notification-service/cmd/server/: main.go
notification-service/internal/config/: config.go
notification-service/internal/database/: database.go  migrations.go
notification-service/internal/handler/: notification.go  preferences.go  websocket.go
notification-service/internal/middleware/: auth.go  preferences.go  websocket.go
notification-service/internal/model/: notification.go  preferences.go
notification-service/internal/repository/: preferences.go
notification-service/scripts/: test.html  test_api.sh  test_notifications.py
(+8 files in other folders)
